--- a/index.html
+++ b/index.html
@@ -157,11 +157,10 @@
             <div class="app-card" onclick="navigateTo('thong-gio-nha-kho.html')">
                 <span class="app-icon">🌬️</span>
                 <h2>Thông Gió Nhà Kho</h2>
-                <p>Phân tích và tính toán điều kiện thông gió tối ưu cho nhà kho</p>
+                <p>Nhập nhiệt độ, độ ẩm để tính nhiệt độ điểm sương, độ ẩm tuyệt đối</p>
                 
                 <div class="app-features">
                     <li>Kết nối Bluetooth với thiết bị đo</li>
-                    <li>Tính toán điểm sương & độ ẩm tuyệt đối</li>
                     <li>Đánh giá điều kiện thông gió tự động</li>
                     <li>Hỗ trợ đa nền tảng (iOS/Android)</li>
                 </div>
@@ -173,11 +172,11 @@
             <div class="app-card" onclick="navigateTo('bang-tinh-di-dong.html')">
                 <span class="app-icon">📊</span>
                 <h2>Bảng Tính Di Động</h2>
-                <p>Quản lý bảng tính đa cấp với tính năng lưu trữ nâng cao</p>
+                <p>Tính tổng số lượng, khối lượng theo cấp</p>
                 
                 <div class="app-features">
                     <li>Quản lý nhiều bảng tính cùng lúc</li>
-                    <li>Lưu trữ local với IndexedDB</li>
+                    <li>Lưu trữ trên điện thoại</li>
                     <li>Import/Export file CSV</li>
                     <li>Tính toán tự động & đánh dấu</li>
                 </div>
